Design the main-layout & use it with all pages

--- a/app_server/views/locations-list.jade
+++ b/app_server/views/locations-list.jade
@@ -1,7 +1,7 @@
-extends layout
+extends layouts/main-layout
 include includes/sharedHTMLFunctions
 
-block content
+block content1
   #banner.page-header
     .row
       .col-lg-6
