--- a/app_server/views/about.jade
+++ b/app_server/views/about.jade
@@ -1,6 +1,6 @@
-extends layout
+extends layouts/main-layout
 
-block content
+block content1
   #banner.page-header
     .row
       .col-md-6.col-sm-12
