--- a/app_server/views/html/page-design.html
+++ b/app_server/views/html/page-design.html
@@ -8,36 +8,27 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
-  </head>
+    <link rel="stylesheet" href='https://maxcdn.bootstrapcdn.com/bootswatch/4.0.0-beta.2/minty/bootstrap.min.css'>
   <body>
-    <!-- Nav tabs -->
-    <ul class="nav nav-tabs" id="navId">
-      <li class="nav-item">
-        <a href="#tab1Id" class="nav-link active">Active</a>
-      </li>
-      <li class="nav-item">
-        <a href="#tab5Id" class="nav-link">Another link</a>
-      </li>
-      <li class="nav-item">
-        <a href="#" class="nav-link disabled">Disabled</a>
-      </li>
-    </ul>
+    <nav class="navbar navbar-expand-sm navbar-light" style="background-color: #0c864981;">
+        <a class="navbar-brand" href="#">Navbar</a>
+        <button class="navbar-toggler hidden-lg-up" type="button" data-toggle="collapse" data-target="#collapsibleNavId" aria-controls="collapsibleNavId"
+            aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="collapsibleNavId">
+            <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+                <li class="nav-item active">
+                    <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Link</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
     
-    <!-- Tab panes -->
-    <div class="tab-content">
-      <div class="tab-pane fade in active" id="tab1Id" role="tabpanel"></div>
-      <div class="tab-pane fade" id="tab2Id" role="tabpanel"></div>
-      <div class="tab-pane fade" id="tab3Id" role="tabpanel"></div>
-      <div class="tab-pane fade" id="tab4Id" role="tabpanel"></div>
-      <div class="tab-pane fade" id="tab5Id" role="tabpanel"></div>
-    </div>
     
-    <script>
-      $('#navId a').click(e => {
-        e.preventDefault();
-        $(this).tab('show');
-      });
-    </script>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
