--- a/app_server/views/layouts/mirath-layout.jade
+++ b/app_server/views/layouts/mirath-layout.jade
@@ -1,36 +1,15 @@
 extends main-layout
 
 block content1
-  .row
-    .col-xs-12
-      // Nav tabs
-      ul#mirathNav.nav.nav-tabs.navbar-right.arabic-content.ml-0
+  nav.navbar.navbar-expand-sm.navbar-dark.arabic-content(style='background-color: #0c864981;')
+    a.navbar-brand(href='/') الشاشه الرئيسيه       
+    button.navbar-toggler.hidden-lg-up(type='button', data-toggle='collapse', data-target='#collapsibleNavId', aria-controls='collapsibleNavId', aria-expanded='false', aria-label='Toggle navigation')
+      span.navbar-toggler-icon
+    #collapsibleNavId.collapse.navbar-collapse
+      ul.float-xs-right.navbar-nav.mt-2.mt-lg-0
+        li.nav-item.active
+          a.nav-link(href='/mirath/data-entry') إدخال الورثه 
+            span.sr-only (current)            
         li.nav-item
-          a.nav-link(href='/mirath/result') شاشة اﻷنصبه
-        |       
-        li.nav-item
-          a.nav-link(href='/mirath/data-entry') إدخال الورثه
-        |       
-        li.nav-item
-          a.nav-link.active(href='/') 
-            الشاشه الرئيسيه
-            | &nbsp;
-            span.glyphicon.glyphicon-home
-            
-
-      // Tab panes
-      .tab-content
-        #tab1Id.tab-pane.fade.in.active(role='tabpanel')
-        |       
-        #tab2Id.tab-pane.fade(role='tabpanel')
-        |       
-        #tab3Id.tab-pane.fade(role='tabpanel')
-
-      // Mirath nav script
-      script.
-          $('#mirathNav a').click(e => {
-          e.preventDefault();
-          $(this).tab('show');
-          });
-       
+          a.nav-link(href='/mirath/result') شاشة اﻷنصبه 
   block content2
