Add style for cards and input groups

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -19,3 +19,10 @@ nav a{
 .navbar-brand{
     font-size: x-large;
 }
+
+.card,.card *{
+    border-color: #0c864981;
+    text-align: center;
+}
+
+
