Design mirath-data view

--- a/app_server/views/mirath-data.jade
+++ b/app_server/views/mirath-data.jade
@@ -1,5 +1,9 @@
 extends layouts/mirath-layout
+include includes/sharedHTMLFunctions
 
 block content2
-  //h1 mirath page 1
+  +createCards()
+    
+script(src="/javascripts/dataEntry.js")
+
   
