--- a/app_server/views/mirath-data.jade
+++ b/app_server/views/mirath-data.jade
@@ -2,6 +2,8 @@ extends layouts/mirath-layout
 include includes/sharedHTMLFunctions
 
 block content2
-  +createCards()
+  .container-fluid.pr-0.pl-0(align="middle")
+      .col-12.col-sm-10.col-lg-8
+        +createCards()
     
 script(src="/javascripts/dataEntry.js")
