--- a/app_server/views/layouts/mirath-layout.jade
+++ b/app_server/views/layouts/mirath-layout.jade
@@ -1,9 +1,12 @@
 extends main-layout
 
 block content1
-  nav.navbar.navbar-expand-sm.navbar-dark.arabic-content(style='background-color: #0c864981;')
+  nav.navbar.navbar-expand-sm.navbar-dark.arabic-content(
+    style='background-color: #0c864981;')
     a.navbar-brand(href='/') الشاشه الرئيسيه       
-    button.navbar-toggler.hidden-lg-up(type='button', data-toggle='collapse', data-target='#collapsibleNavId', aria-controls='collapsibleNavId', aria-expanded='false', aria-label='Toggle navigation')
+    button.navbar-toggler.hidden-lg-up(type='button', data-toggle='collapse',
+      data-target='#collapsibleNavId', aria-controls='collapsibleNavId', 
+      aria-expanded='false', aria-label='Toggle navigation')
       span.navbar-toggler-icon
     #collapsibleNavId.collapse.navbar-collapse
       ul.float-xs-right.navbar-nav.mt-2.mt-lg-0
