Improve styling & theme of all views

--- a/app_server/views/layouts/main-layout.jade
+++ b/app_server/views/layouts/main-layout.jade
@@ -9,12 +9,12 @@ html(lang='ar')
   body
     .jumbotron.pt-3.mb-0.pb-0
       .container(align="middle")
-        img.img-fluid.pb-2(src="/images/logo.png" alt="Smiley fac")
+        img.img-fluid.pb-2(src="/images/logo.png" alt="بسم الله الرحمن الرحيم")
       .container-fluid
         #banner.page-header.mt-0
           .row
             .col-12
-              h1.arabic-content اﻹستحقاقات في القرآن 
+              h1.arabic-content.text-primary اﻹستحقاقات في القرآن 
           .row
             .col-sm-12.mr-sm-5.mr-4
               p.arabic-content تطبيق لحساب الميراث ,الزكاه ,الديه والفي حسب قوانينها المنصوص عليها في القرآن الكريم    
