Create buttons of 'mirath-result' view

--- a/app_server/views/mirath-result.jade
+++ b/app_server/views/mirath-result.jade
@@ -1,5 +1,13 @@
 extends layouts/mirath-layout
 
 block content2
-  //h1 mirath page 1
+  .container-fluid.pr-0.pl-0(align="middle")
+    .col-12.col-sm-10.col-lg-8
+    .row
+      .col-6
+        a.btn.btn-primary.btn-lg.arabic-content(href='/mirath/result',
+        role='button', aria-disabled='true') أطبع النتيجه
+      .col-6
+        a.btn.btn-outline-info.btn-lg.arabic-content(href='/mirath/result/detail',
+        role='button', aria-disabled='true') التفاصيل
   
