--- a/app_server/views/includes/sharedHTMLFunctions.jade
+++ b/app_server/views/includes/sharedHTMLFunctions.jade
@@ -44,10 +44,10 @@ mixin createCards()
                 each person in people
                   .col-12.col-sm-6.col-lg-6
                     .input-group.mb-2
-                      span.input-group-addon
+                      span.input-group-addon.input-group-addon-checkbox
                         input(aria-label='Checkbox for following text input', type='checkbox')             
                       span.input-group-addon #{person}            
-                      input.form-control(aria-label='Text input with checkbox', type='text')  
+                      input.form-control.textarea-right(aria-label='Text input with checkbox', type='text')  
 
 mixin displayResultTable(alwratha)
   table.table.table-hover
