Add fallback options for font-family

--- a/app_server/views/home.jade
+++ b/app_server/views/home.jade
@@ -1,7 +1,7 @@
 extends layouts/main-layout
 
 block content1
-  nav.navbar.navbar-expand-sm.navbar-dark.arabic-content(style='background-color: #0c864981;')
+  nav.navbar.navbar-expand-sm.navbar-dark.arabic-content.bg-primary
     a.navbar-brand(href='/about') نبذه عن التطبيق       
     button.navbar-toggler.hidden-lg-up(type='button', data-toggle='collapse', data-target='#collapsibleNavId', aria-controls='collapsibleNavId', aria-expanded='false', aria-label='Toggle navigation')
       span.navbar-toggler-icon
