--- a/app_server/views/layouts/mirath-layout.jade
+++ b/app_server/views/layouts/mirath-layout.jade
@@ -1,7 +1,7 @@
 extends main-layout
 
 block content1
-  nav.navbar.navbar-expand-sm.navbar-dark.btn-primary.arabic-content
+  nav.navbar.navbar-expand-sm.navbar-dark.bg-primary.arabic-content
     a.navbar-brand(href='/') الشاشه الرئيسيه       
     button.navbar-toggler.hidden-lg-up(type='button', data-toggle='collapse',
       data-target='#collapsibleNavId', aria-controls='collapsibleNavId', 
