Change app title to estihgagat

--- a/app_server/views/layouts/main-layout.jade
+++ b/app_server/views/layouts/main-layout.jade
@@ -2,7 +2,7 @@ doctype html
 html(lang='ar')
   head
     meta(name='viewport', content='width=device-width, initial-scale=1.0')
-    title App
+    title "اﻹستحقاقات في القرآن"
     link(rel='stylesheet', href='https://maxcdn.bootstrapcdn.com/bootswatch/4.0.0-beta.2/minty/bootstrap.min.css')
     link(rel='stylesheet', href='/stylesheets/style.css')
     
