--- a/app_server/views/includes/sharedHTMLFunctions.jade
+++ b/app_server/views/includes/sharedHTMLFunctions.jade
@@ -64,13 +64,21 @@ mixin displayResultTable(alwratha)
           td #{relative.fortune} 
 
 mixin displayNavItems(items)
-  each item, index in items
-    -if(index === 0)
-      li.nav-item.active
-        a.nav-link(href= item.url) #{item.name}
-          span.sr-only (current)
-    -else            
-      li.nav-item
-        a.nav-link(href= item.url) #{item.name}   
+  nav.navbar.navbar-expand-sm.navbar-dark.bg-primary.arabic-content
+    a.navbar-brand(href='/') الشاشه الرئيسيه       
+    button.navbar-toggler.hidden-lg-up(type='button', data-toggle='collapse',
+      data-target='#collapsibleNavId', aria-controls='collapsibleNavId', 
+      aria-expanded='false', aria-label='Toggle navigation')
+      span.navbar-toggler-icon
+    #collapsibleNavId.collapse.navbar-collapse
+      ul.float-xs-right.navbar-nav.mt-2.mt-lg-0
+        each item, index in items
+          -if(index === 0)
+            li.nav-item.active
+              a.nav-link(href= item.url) #{item.name}
+                span.sr-only (current)
+          -else            
+            li.nav-item
+              a.nav-link(href= item.url) #{item.name}   
       
       
