--- a/app_server/views/layouts/mirath-layout.jade
+++ b/app_server/views/layouts/mirath-layout.jade
@@ -1,18 +1,7 @@
 extends main-layout
+include ../includes/sharedHTMLFunctions
 
 block content1
-  nav.navbar.navbar-expand-sm.navbar-dark.bg-primary.arabic-content
-    a.navbar-brand(href='/') الشاشه الرئيسيه       
-    button.navbar-toggler.hidden-lg-up(type='button', data-toggle='collapse',
-      data-target='#collapsibleNavId', aria-controls='collapsibleNavId', 
-      aria-expanded='false', aria-label='Toggle navigation')
-      span.navbar-toggler-icon
-    #collapsibleNavId.collapse.navbar-collapse
-      ul.float-xs-right.navbar-nav.mt-2.mt-lg-0
-        li.nav-item.active
-          a.nav-link(href='/mirath/data-entry') إدخال الورثه 
-            span.sr-only (current)            
-        li.nav-item
-          a.nav-link(href='/mirath/result') شاشة اﻷنصبه 
+  +displayNavItems(items)
   block content2
   
