Correct the discription on the main-layout page
Stakeholder requested to change the paragraph under the app name
to 'في الشريعه اﻹسلاميه'

--- a/app_server/views/layouts/main-layout.jade
+++ b/app_server/views/layouts/main-layout.jade
@@ -17,7 +17,7 @@ html(lang='ar')
               h1.arabic-content.text-primary اﻹستحقاقات في القرآن 
           .row
             .col-sm-12.mr-sm-5.mr-4
-              p.arabic-content تطبيق لحساب الميراث ,الزكاه ,الديه والفي حسب قوانينها المنصوص عليها في القرآن الكريم    
+              p.arabic-content تطبيق لحساب الميراث ,الزكاه ,الديه والفي حسب قوانينها المنصوص عليها في الشريعه اﻹسلاميه    
       hr.my-1
       .container-fluid.ml-0.pl-0.mr-0.pr-0
         block content1
