Display singular relative without text input addon
Stakeholder requested to remove the text box used to enter the
number of alwrtha off each those relatives who can't be plural. So
, We modify createCards() mixin to only add input text box if the
person is not singular

--- a/app_server/views/mirath-data.jade
+++ b/app_server/views/mirath-data.jade
@@ -4,7 +4,7 @@ include includes/sharedHTMLFunctions
 block content2
   .form.pr-0.pl-0(align="middle")
     .col-12.col-sm-10.col-lg-8
-      +createCards()
+      +createCards(listOfAlwartha)
     a.btn.btn-primary.btn-lg.arabic-content(href='/mirath/result',
      role='button', aria-disabled='true') أحسب اﻷنصبه
 script(src="/javascripts/dataEntry.js")
