--- a/app_server/views/includes/sharedHTMLFunctions.jade
+++ b/app_server/views/includes/sharedHTMLFunctions.jade
@@ -16,26 +16,8 @@ mixin formatDate(timeStamp)
   - var output = day + ' ' + month + ' ' + year;
   = output
 
-mixin createCards()
-  -
-    var alwartha = { 
-                      "العصبات": 
-                      [
-                        "ابن", "ابن ابن",
-                        "أخ شقيق", "أخ ﻷب", "ابن أخ شقيق",
-                        "ابن أخ ﻷب", "عم ﻷب", 
-                        "عم شقيق", "ابن عم شقيق", "ابن عم ﻷب"
-                      ], 
-                      "أصحاب الفروض": 
-                      [
-                        "زوج", "زوجه", "أخت شقيقه", 
-                        "أخت ﻷب","بنت", "بنت ابن", 
-                        "أم", "أم أم", "أم ﻷب",
-                        "إخوه ﻷم"
-                      ],
-                      "أصحاب فروض وعصبات": ["أب", "جد"]
-                   };
-  each people, cluster in alwartha 
+mixin createCards(listOfWratha)
+  each people, cluster in listOfWratha 
         .card.mb-3.mt-3
             h5.card-header.text-center.arabic-content(
               style='background-color: #c7f6a894') #{cluster}  
@@ -46,8 +28,9 @@ mixin createCards()
                     .input-group.mb-2
                       span.input-group-addon.addon-checkbox-right
                         input(aria-label='Checkbox for following text input', type='checkbox')             
-                      span.input-group-addon #{person}            
-                      input.form-control.addon-textarea-right(aria-label='Text input with checkbox', type='text')  
+                      span.input-group-addon.removed-border-right #{person.relationship}  
+                      -if(!person.singular)          
+                        input.form-control.addon-textarea-right(aria-label='Text input with checkbox', type='text')  
 
 mixin displayResultTable(alwratha)
   table.table.table-hover
