--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -39,6 +39,12 @@ nav a{
     border-radius: 0.4rem 0rem 0rem 0.4rem !important; 
 }
 
+.input-group-addon.removed-border-right
+{
+    border-right: 0;
+    border-radius: 0rem;
+}
+
 @media screen and (min-width: 240px) {
     h1 {
         font-size: 1.6rem;
