--- a/app_server/views/mirath-result.jade
+++ b/app_server/views/mirath-result.jade
@@ -6,7 +6,7 @@ block content2
     .col-12.col-sm-10.col-lg-8
       .card.mb-3.mt-3
         h5.card-header.text-center.arabic-content(
-          style='background-color: #c7f6a894') توزيع الميراث (اﻷنصيه)  
+          style='background-color: #c7f6a894') إستحقاق الورثه  
         .card-body.arabic-content
           +displayResultTable(alwratha)
     .row
