--- a/app_server/views/includes/sharedHTMLFunctions.jade
+++ b/app_server/views/includes/sharedHTMLFunctions.jade
@@ -48,20 +48,20 @@ mixin displayResultTable(alwratha)
 
 mixin displayNavItems(items)
   nav.navbar.navbar-expand-sm.navbar-dark.bg-primary.arabic-content
-    a.navbar-brand(href='/') الشاشه الرئيسيه       
+    a.navbar-brand(href= items[0].url) #{items[0].name}      
     button.navbar-toggler.hidden-lg-up(type='button', data-toggle='collapse',
       data-target='#collapsibleNavId', aria-controls='collapsibleNavId', 
       aria-expanded='false', aria-label='Toggle navigation')
       span.navbar-toggler-icon
     #collapsibleNavId.collapse.navbar-collapse
       ul.float-xs-right.navbar-nav.mt-2.mt-lg-0
-        each item, index in items
-          -if(index === 0)
+        -for(var index = 1; index < items.length; index++)
+          -if(index === 1)
             li.nav-item.active
-              a.nav-link(href= item.url) #{item.name}
+              a.nav-link(href= items[index].url) #{items[index].name}
                 span.sr-only (current)
           -else            
             li.nav-item
-              a.nav-link(href= item.url) #{item.name}   
+              a.nav-link(href= items[index].url) #{items[index].name}   
       
       
