--- a/app_server/views/layouts/main-layout.jade
+++ b/app_server/views/layouts/main-layout.jade
@@ -2,7 +2,7 @@ doctype html
 html(lang='ar')
   head
     meta(name='viewport', content='width=device-width, initial-scale=1.0')
-    title اﻹستحقاقات في القرآن
+    title اﻹستحقاقات في اﻹسلام
     link(rel='stylesheet', href='https://maxcdn.bootstrapcdn.com/bootswatch/4.0.0-beta.2/minty/bootstrap.min.css')
     link(rel='stylesheet', href='/stylesheets/style.css')
     script(src="https://code.jquery.com/jquery-3.2.1.slim.min.js")
@@ -15,7 +15,7 @@ html(lang='ar')
         #banner.page-header.mt-0
           .row
             .col-12
-              h1.arabic-content.text-primary اﻹستحقاقات في القرآن 
+              h1.arabic-content.text-primary اﻹستحقاقات في اﻹسلام  
           .row
             .col-sm-12.mr-sm-5.mr-4
               p.arabic-content تطبيق لحساب الميراث ,الزكاه ,الديه والفي حسب قوانينها المنصوص عليها في الشريعه اﻹسلاميه    
@@ -26,6 +26,5 @@ html(lang='ar')
         .row
           .col-xs-12
             small &copy; Yassin Hassan 2017
-    
     script(src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js")
     script(src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js")
