--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -43,6 +43,8 @@ nav a{
 {
     border-right: 0;
     border-radius: 0rem;
+    width: 5rem !important;
+    padding-right: 0rem !important;
 }
 
 @media screen and (min-width: 240px) {
