Add invalid class for form data validation

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -47,6 +47,11 @@ nav a{
     padding-right: 0rem !important;
 }
 
+.invalid
+{
+    color: red;
+    border-color: red;
+}
 @media screen and (min-width: 240px) {
     h1 {
         font-size: 1.6rem;
