--- a/app_server/views/mirath-data.jade
+++ b/app_server/views/mirath-data.jade
@@ -9,4 +9,4 @@ block content2
         +createCards(listOfAlwartha)
       button.btn.btn-primary.btn-lg.arabic-content(id="submit",
         type="submit", aria-disabled='true') أحسب اﻷنصبه
-  script(src="/javascripts/dataEntry.js")
+  script(src="/javascripts/mirath-data-validation.js")
