--- a/app_server/views/mirath-result.jade
+++ b/app_server/views/mirath-result.jade
@@ -8,7 +8,7 @@ block content2
         h5.card-header.text-center.arabic-content(
           style='background-color: #c7f6a894') إستحقاق الورثه  
         .card-body.arabic-content
-          +displayResultTable(alwratha)
+          +displayResultTable(result)
     .row
       .col-6
         a.btn.btn-primary.btn-lg.arabic-content(href='/mirath/result',
