Set value of singular wratha to 1
Previously all singular wratha did not have input field. This
resulted in those wratha not being submitted. To resolve this, we
modify view to add hidden input fields with value set to 1 for all
singular wratha

--- a/app_server/views/includes/sharedHTMLFunctions.jade
+++ b/app_server/views/includes/sharedHTMLFunctions.jade
@@ -32,6 +32,9 @@ mixin createCards(listOfWratha)
                   -if(!person.singular)          
                     input.form-control.addon-textarea-right(name=person.relationship, 
                       type='text', disabled, placeholder=0)  
+                  -else         
+                    input.form-control.addon-textarea-right(name=person.relationship, 
+                      type='text', hidden, disabled, value=1)  
 
 mixin displayResultTable(result)
   table.table.table-hover
