--- a/app_server/views/includes/sharedHTMLFunctions.jade
+++ b/app_server/views/includes/sharedHTMLFunctions.jade
@@ -29,7 +29,7 @@ mixin createCards(listOfWratha)
                   span.input-group-addon.addon-checkbox-right
                     input(aria-label='Checkbox for following text input', type='checkbox')             
                   span.input-group-addon.removed-border-right #{person.relationship}  
-                  -if(!person.singular)          
+                  -if(!person.isSingular)          
                     input.form-control.addon-textarea-right(name=person.relationship, 
                       type='text', disabled, placeholder=0)  
                   -else         
