--- a/app_server/views/mirath-data.jade
+++ b/app_server/views/mirath-data.jade
@@ -1,12 +1,51 @@
 extends layouts/mirath-layout
-include includes/sharedHTMLFunctions
 
 block content2
   center
-    form.pr-0.pl-0(id="alwrathaData", action= "/mirath/data-entry", 
-      method="POST")
+    .col-12.col-sm-10.col-lg-8
+      form.jumbotron.mt-3.pb-3(
+        id="altarikaData", method="POST",
+        action= "/mirath/data-entry/altarika")
+        +displayAltarikaForm()
+        button.btn.btn-info.btn-lg.arabic-content.mt-3(
+          id="submitAltarika",type="submit",
+          aria-disabled='true',
+          style="align = center") تأكيد            
+    form.pr-0.pl-0(id="alwrathaData", method="POST",
+      action= "/mirath/data-entry/alwratha")
       .col-12.col-sm-10.col-lg-8
         +createCards(listOfAlwartha)
-      button.btn.btn-primary.btn-lg.arabic-content(id="submit",
-        type="submit", aria-disabled='true') أحسب اﻷنصبه
+      button.btn.btn-primary.btn-lg.arabic-content(
+        id="submitAlwratha", type="submit",
+        aria-disabled='true') أحسب اﻷنصبه
   script(src="/javascripts/mirath-data-validation.js")
+
+
+
+
+
+mixin displayAltarikaForm()
+  - const altarikaTypes = ["أموال", "عقار"]
+  h5.arabic-content ادخل تفاصيل التركه
+  hr.my-2.col-10.mr-0
+  .col-12.col-sm-6
+  each tarikaType in altarikaTypes
+    .col-12.col-lg-10
+      .input-group.arabic-content.mb-2
+        span.input-group-addon.addon-checkbox-right
+          input(type='checkbox',
+            aria-label='Checkbox for following text input')             
+        span.input-group-addon.removed-border-right #{tarikaType}     
+        input.form-control.addon-textarea-right(name= tarikaType, 
+          type='text', disabled, placeholder=0)  
+
+mixin displaySexSelectionForm()
+  .form-group
+    h5.arabic-content اختر جنس المتوفى
+    hr.my-2.col-10.mr-0
+    .mr-2.mb-4
+      select.custom-select.arabic-content
+        option(selected= "") انقر هنا
+        option(value= "ذكر") ذكر
+        option(value= "أنثى") أنثى  
+
