--- a/app_server/views/mirath-data.jade
+++ b/app_server/views/mirath-data.jade
@@ -8,7 +8,7 @@ block content2
           id="altarikaData", method="POST",
           action= "/mirath/data-entry/altarika")
           +displayAltarikaForm()
-          button.btn.btn-info.btn-lg.arabic-content.mt-3(
+          button.btn.btn-primary.btn-lg.arabic-content.mt-3(
             id="submitAltarika",type="submit",
             aria-disabled='true',
             style="align = center") تأكيد  
