--- a/app_server/views/mirath-result.jade
+++ b/app_server/views/mirath-result.jade
@@ -5,8 +5,7 @@ block content2
   .container-fluid.pr-0.pl-0(align="middle")
     .col-12.col-sm-10.col-lg-8
       .card.mb-3.mt-3
-        h5.card-header.text-center.arabic-content(
-          style='background-color: #c7f6a894') إستحقاق الورثه  
+        h5.card-header.text-center.arabic-content إستحقاق الورثه  
         .card-body.arabic-content
           +displayResultTable(result)
     .row
